Edit rust dockerfile

--- a/docker/rust/dockerfile
+++ b/docker/rust/dockerfile
@@ -9,5 +9,6 @@ USER root
 RUN apt update && apt install -y libsqlite3-dev
 
 COPY ./startup.sh .
+RUN chmod +x ./startup.sh
 ENTRYPOINT ["./startup.sh"]
 EXPOSE 28015 28016
