--- a/docker/rust/dockerfile
+++ b/docker/rust/dockerfile
@@ -3,6 +3,7 @@ RUN ./steamcmd.sh +force_install_dir /home/steam/rust-dedicated +login anonymous
 WORKDIR /home/steam/rust-dedicated
 
 ENV OWNERID 76561198182710063
+RUN mkdir -p ./server/my_server_identity/cfg
 RUN echo "ownerid $OWNERID" >> ./server/my_server_identity/cfg/users.cfg
 
 USER root
